--- a/data_migrator/views/migration_config.xml
+++ b/data_migrator/views/migration_config.xml
@@ -35,6 +35,7 @@
                                             <field name="ttype"/>
                                             <field name="remote_ttype"/>
                                             <field name="ident"/>
+                                            <field name="exceptions"/>
                                         </tree>
                                     </field>
                                 </form>
