[#1927] Add a custom domain to the update

--- a/data_migrator/views/migration_config.xml
+++ b/data_migrator/views/migration_config.xml
@@ -25,6 +25,7 @@
                                     <group>
                                         <field name="name"/>
                                         <field name="remote_name"/>
+                                        <field name="extra_domain" />
                                         <field name="no_create" />
                                         <field name="completness" widget="progressbar" />
                                         <field name="sequence"/>    
